--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -4,7 +4,7 @@
 <div class="card p-4">
   <p>If you’ve forgotten your password, please contact support and we’ll help you regain access.</p>
   <ul>
-    <li>Email: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></li>
+    <li>Email: <a href="mailto:support@yourdomain.com">nicholas@alterasf.com</a></li>
   </ul>
   <a class="btn btn-secondary" href="{{ url_for('login') }}">← Back to login</a>
 </div>
