--- a/templates/edit_jd.html
+++ b/templates/edit_jd.html
@@ -57,8 +57,8 @@
     </div>
   </div>
 
-  <label class="form-label">Description (HTML)</label>
-  <textarea name="jd_text" rows="8" class="form-control mb-3">{{ jd.html }}</textarea>
+  <label class="form-label">Description</label>
+  <textarea name="jd_text" rows="8" class="form-control mb-3" placeholder="Paste plain text; line breaks will be preserved.">{{ jd.html }}</textarea>
 
   <button class="btn btn-primary">Save</button>
 </form>
